# Freshman_repo

./: NMEA.py  README.md  helloworld.py  temp.py  useful.txt
GPS_Parsing_Hojune/: Read_Me_Please_I_Beg_you.txt
GPS_Parsing_Hojune/Source_Code/: par_pub.py  par_sub.py
NMEA/dev_ws/: utm_data.csv
NMEA_ROS2/: package.xml  setup.cfg  setup.py
NMEA_ROS2/NMEA_ROS2/: NMEA.py
NMEA_TXT_PARSING/: NMEA.py  predict.py
bank_alg/: bank.py
bank_alg/__pycache__/: bank.py  def__study.txt  log_data.py  service.py
bank_project/: bank_algorithm.txt  bank_system.py  log.py  main.py  user.py  user_list.py
bank_project/log/: bank_log.txt  user_log.txt
c0/: ex1.c  ex2.c  ex4.c  ex5.c  ex6.c  ex7.c  ex9.c
c1/: ex11.c  ex12.c  ex15.c  ex17.c  ex18.c
c2/: ex21.c  ex22.c  ex23.c  ex24.c  ex26.c  ex27.c
c3/: ex31.c  ex36.c  ex37.c  ex38.c
c4/: ex41.c
c_programmers/c0/: ex3.c  ex8.c
c_programmers/c1/: ex10.c  ex13.c  ex14.c  ex16.c  ex19.c
c_programmers/c2/: ex20.c  ex25.c  ex28.c  ex29.c
c_programmers/c3/: ex30.c  ex32.c  ex33.c  ex34.c  ex35.c  ex39.c
c_programmers/c4/: ex40  ex40.c  ex42.c  ex43  ex43.c  ex44  ex44.c
coding_test_python/1_15/: 1.py  10.py  11.py  12.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
coding_test_python/1_16/: 13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py  26.py
coding_test_python/1_17/: 27.py  (+9 more)
ros2_nmea/: output.csv  predict.py
ros2_package_hojune/src/parsing_test/: package.xml  setup.cfg  setup.py
ros2_package_hojune/src/parsing_test/parsing_test/: par_pub.py  par_sub.py
(+88 files in other folders)
